# ai-podcast-generator

./: .pre-commit-config.yaml  LICENSE  README.md  config.json  pyproject.toml
src/ai_podcast_generator/: __main__.py  config.py
src/ai_podcast_generator/connectors/: base_connector.py  rss_connector.py
src/ai_podcast_generator/document/: base_document.py
