[tool.poetry]
name = "ai-podcast-generator"
version = "0.1.0"
description = ""
authors = ["renephan", "maltemelzer"]
license = "MIT"
readme = "README.md"
packages = [{include="ai_podcast_generator", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
feedparser = "^6.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"
python-semantic-release = "^9.8.3"
poethepoet = "^0.26.1"

[tool.poe.tasks]
qa = ["black", "ruff"]
black = "black src"
ruff = "ruff check src --fix"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
